force-app/main/default/objects/DataTableColumn__mdt/DataTableColumn__mdt.object-meta.xml
<CustomObject>
    <description>Stores column definitions for Dynamic Data Table component</description>
    <label>DataTableColumn</label>
    <pluralLabel>DataTableColumns</pluralLabel>
</CustomObject>