force-app/main/default/objects/DataTableColumn__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Column header text shown to user</description>
    <label>Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>