force-app/main/default/objects/DataTableColumn__mdt/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <description>Must match TableName__c in DataTableConfig__mdt exactly</description>
    <label>Table Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>