force-app/main/default/objects/DataTableColumn__mdt/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Column width in pixels</description>
    <label>Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>